# src/main/kotlin/com/wutsi/checkout/manager/dto/CheckoutResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.checkout.manager.dto
+
+public data class CheckoutResponse(
+    public val orderId: String = "",
+    public val transactionId: String = "",
+    public val transactionStatus: String = ""
+)
