# src/main/kotlin/com/wutsi/checkout/manager/event/EventHandler.kt
@@ -7,7 +7,8 @@ import org.springframework.stereotype.Service
 
 @Service
 class EventHandler(
-    private val membership: MembershipEventHandler
+    private val membership: MembershipEventHandler,
+    private val checkout: CheckoutEventHandler
 ) {
     @EventListener
     fun handleEvent(event: Event) {
@@ -15,6 +16,8 @@ class EventHandler(
             EventURN.MEMBER_REGISTERED.urn -> membership.onMemberRegistered(event)
             EventURN.BUSINESS_ACCOUNT_ENABLED.urn -> membership.onBusinessAccountEnabled(event)
             EventURN.BUSINESS_ACCOUNT_DISABLED.urn -> membership.onBusinessAccountDisabled(event)
+            InternalEventURN.CHARGE_FAILED.urn -> checkout.onChargeFailed(event)
+            InternalEventURN.CHARGE_SUCESSFULL.urn -> checkout.onChargeSuccessful(event)
             else -> {}
         }
     }
